  Paths whos results do not contribute to the saved TriggerResult)

  To get the veto or inverted decision going for modules-in-paths, the
  temporary "Workers" collection needs to be pair<bool inverted, Worker*>
  instead of just the Worker*.  The Path will need to take this
  and use it in the construction of the WorkerInPath.

  Martin requested adding a vstring named "listOfTriggers" that can be
  used to explicitly list the paths that will have bits assigned to them.
  In addition, we need a control that stops event propagation through
  endpaths if all trigger bits are false. (the outputmodules in "veto"
  mode will not see these then).

03-02-06

completed unit test scripts testBits*.cfg that excerise the trigger bit
logic.  They also test the output module interface - in particular 
they test the event selection logic.

endpaths are now real paths

all output modules in regular paths now get moved to a single new endpath.
if the output module makes a regular path empty, then that path is not
included in the processing of the schedule.

the veto specification for modules in paths is complete.  you can now
place a ! in front of any module in a path and reverse its decision for
that path only.

The "listOfTriggers" feature is still not complete. (see previous entry)
One way this might work is to prepare a better PSet to give to
the scheduler and the triggernameservice.  The better one would have
a list of trigger paths, a list of none-trigger paths, and a list of
endpaths (or perhaps just move all none-trigger paths to endpaths.
Must be careful here for bad interactions if paths are reordered.
It should not matter since paths are supposed to be independent.
Need to communicate a bit more with Martin about this reordering or
marking.

Warning: the SelectEvents pset untracked option is not working properly
because of problems in the parameterset library.  The test scripts
will need to be upgraded when it is fixed.


